syntax = "proto3";

package kore;

option go_package = "github.com/yukin/kore/api/proto;rpc";

// Kore 服务定义
service Kore {
  // 会话管理
  rpc CreateSession(CreateSessionRequest) returns (Session);
  rpc GetSession(GetSessionRequest) returns (Session);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);

  // 消息流（双向流）
  rpc SendMessage(stream MessageRequest) returns (stream MessageResponse);

  // 命令执行（流式输出）
  rpc ExecuteCommand(CommandRequest) returns (stream CommandOutput);

  // LSP 请求
  rpc LSPComplete(LSPCompleteRequest) returns (LSPCompleteResponse);
  rpc LSPDefinition(LSPDefinitionRequest) returns (LSPDefinitionResponse);
  rpc LSPHover(LSPHoverRequest) returns (LSPHoverResponse);
  rpc LSPReferences(LSPReferencesRequest) returns (LSPReferencesResponse);
  rpc LSPRename(LSPRenameRequest) returns (LSPRenameResponse);
  rpc LSPDiagnostics(LSPDiagnosticsRequest) returns (stream LSPDiagnosticEvent);

  // 事件订阅
  rpc SubscribeEvents(SubscribeRequest) returns (stream Event);

  // 虚拟文档管理
  rpc CreateVirtualDocument(CreateVirtualDocRequest) returns (CreateVirtualDocResponse);
  rpc UpdateVirtualDocument(UpdateVirtualDocRequest) returns (UpdateVirtualDocResponse);
  rpc CloseVirtualDocument(CloseVirtualDocRequest) returns (CloseVirtualDocResponse);
}

// ============================================================================
// 消息类型
// ============================================================================

message MessageRequest {
  string session_id = 1;
  string content = 2;
  string role = 3;  // "user", "assistant", "system"
  map<string, string> metadata = 4;
}

message MessageResponse {
  string content = 1;
  string role = 2;
  int64 timestamp = 3;
  bool done = 4;
  map<string, string> metadata = 5;
}

// ============================================================================
// 命令执行
// ============================================================================

message CommandRequest {
  string session_id = 1;
  string command = 2;
  repeated string args = 3;
  string working_dir = 4;
  map<string, string> env = 5;
  bool background = 6;  // 是否后台运行
}

message CommandOutput {
  enum OutputType {
    STDOUT = 0;
    STDERR = 1;
    EXIT = 2;
  }
  OutputType type = 1;
  bytes data = 2;
  int32 exit_code = 3;
  int32 pid = 4;  // 进程 ID（后台进程时使用）
}

// ============================================================================
// LSP 请求
// ============================================================================

message LSPCompleteRequest {
  string session_id = 1;
  string file_uri = 2;
  int32 line = 3;
  int32 character = 4;
}

message LSPCompleteResponse {
  repeated CompletionItem items = 1;
  bool is_incomplete = 2;
}

message CompletionItem {
  string label = 1;
  string kind = 2;  // "Function", "Variable", "Class", etc.
  string detail = 3;
  string documentation = 4;
  string insert_text = 5;
  string sort_text = 6;
  map<string, string> data = 7;
}

message LSPDefinitionRequest {
  string session_id = 1;
  string file_uri = 2;
  int32 line = 3;
  int32 character = 4;
}

message LSPDefinitionResponse {
  repeated Location locations = 1;
}

message Location {
  string uri = 1;
  Range range = 2;
}

message Range {
  Position start = 1;
  Position end = 2;
}

message Position {
  int32 line = 1;      // 0-based
  int32 character = 2;  // 0-based
}

message LSPHoverRequest {
  string session_id = 1;
  string file_uri = 2;
  int32 line = 3;
  int32 character = 4;
}

message LSPHoverResponse {
  string contents = 1;
  Range range = 2;
}

message LSPReferencesRequest {
  string session_id = 1;
  string file_uri = 2;
  int32 line = 3;
  int32 character = 4;
  bool include_declaration = 5;
}

message LSPReferencesResponse {
  repeated Location locations = 1;
}

message LSPRenameRequest {
  string session_id = 1;
  string file_uri = 2;
  int32 line = 3;
  int32 character = 4;
  string new_name = 5;
}

message LSPRenameResponse {
  WorkspaceEdit edit = 1;
}

message WorkspaceEdit {
  repeated DocumentChange changes = 1;
}

message DocumentChange {
  string uri = 1;
  repeated TextEdit edits = 2;
}

message TextEdit {
  Range range = 1;
  string new_text = 2;
}

message LSPDiagnosticsRequest {
  string session_id = 1;
  string file_uri = 2;
}

message LSPDiagnosticEvent {
  Diagnostic diagnostic = 1;
}

message Diagnostic {
  Range range = 1;
  string severity = 2;  // "Error", "Warning", "Info", "Hint"
  string source = 3;
  string message = 4;
  repeated DiagnosticRelatedInformation related_information = 5;
}

message DiagnosticRelatedInformation {
  Location location = 1;
  string message = 2;
}

// ============================================================================
// 会话管理
// ============================================================================

message CreateSessionRequest {
  string name = 1;
  string agent_type = 2;  // "build", "plan", "general"
  map<string, string> config = 3;
}

message GetSessionRequest {
  string session_id = 1;
}

message ListSessionsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  int32 total = 2;
}

message CloseSessionRequest {
  string session_id = 1;
}

message CloseSessionResponse {
  bool success = 1;
}

message Session {
  string id = 1;
  string name = 2;
  string agent_type = 3;
  string status = 4;  // "idle", "running", "paused", "closed"
  int64 created_at = 5;
  int64 last_active_at = 6;
  map<string, string> metadata = 7;
}

// ============================================================================
// 虚拟文档
// ============================================================================

message CreateVirtualDocRequest {
  string session_id = 1;
  string uri = 2;      // "file:///virtual/main.go"
  string language_id = 3;
  string content = 4;
}

message CreateVirtualDocResponse {
  bool success = 1;
  string version = 2;
}

message UpdateVirtualDocRequest {
  string session_id = 1;
  string uri = 2;
  int32 version = 3;
  string content = 4;
}

message UpdateVirtualDocResponse {
  bool success = 1;
}

message CloseVirtualDocRequest {
  string session_id = 1;
  string uri = 2;
}

message CloseVirtualDocResponse {
  bool success = 1;
}

// ============================================================================
// 事件系统
// ============================================================================

message SubscribeRequest {
  string session_id = 1;  // 空字符串表示订阅所有会话
  repeated string event_types = 2;  // 空列表表示订阅所有类型
}

message Event {
  string type = 1;       // "llm_token", "tool_output", "status", etc.
  string session_id = 2;
  bytes data = 3;        // JSON 编码的事件数据
  int64 timestamp = 4;
}
